--- a/src/components/sign-up-form/sign-up-form.styles.scss
+++ b/src/components/sign-up-form/sign-up-form.styles.scss
@@ -2,6 +2,22 @@
   display: flex;
   flex-direction: column;
   width: 380px;
+
+  @media screen and (max-width: 800px) {
+    align-items: center;
+    margin-bottom: 50px;
+
+    .buttons-container {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+
+    button {
+      width: 100%;
+      margin-top: 5px;
+    }
+  }
 }
 
 h2 {
