--- a/src/routes/authentication/authentication.style.scss
+++ b/src/routes/authentication/authentication.style.scss
@@ -3,4 +3,10 @@
   width: 900px;
   justify-content: space-between;
   margin: 30px auto;
+
+  @media screen and (max-width: 800px) {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
 }
